  * fixed bug: SET-SYNTAX-FROM-CHAR correctly shallow-copies a
    dispatch table if the from-char is a dispatch macro character.
  * fixed bug: COUNT and EQUAL on bit vectors with lengths divisible
    by the wordsize no longer ignore the last word.  (reported by Lutz
    Euler)
  * optimization: sequence traversal functions use their freedom to
    coerce function designators to functions.
  * fixed some bugs related to Unicode integration:
    ** portions of multibyte characters at the end of buffers for
       character-based file input are correctly transferred to the
       start of the buffer at the next read.
    ** COMPILE-FILE now respects any EXTERNAL-FORMAT argument given,
       passing it through to OPEN.
    ** LOAD on source files likewise passes any EXTERNAL-FORMAT
       argument given to internal calls to OPEN.
    ** the built-in comment readers (introduced by character sequences
       ";" and "#|") are more forgiving to encoding errors; they will
       STYLE-WARN and then attempt to resync the stream at a character
       boundary.  (thanks to Teemu Kalvas)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** Space, Tab, Linefeed, Return and Page have the invalid
       secondary constituent character trait.
    ** SET-SYNTAX-FROM-CHAR correctly copies multiple-escape character
       syntax.

changes in sbcl-0.8.19 relative to sbcl-0.8.18:
  * new port: SBCL now works in native 64-bit mode on x86-64/Linux
    platform. The port supports 61-bit fixnums, large memory spaces
    and reloading shared object files.
  * enhancement: saving cores with foreign code loaded is now
    supported on ppc/Darwin in addition to the previously supported
    platforms.
  * enhancement: the statistical profiler now walks deeper into the 
    call stack for more meaningful call-graphs and accrued time
    reports (x86/x86-64 only). It also now reports time spent in
    foreign functions.